--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,9 +1,15 @@
 :root {
   --main-color: #00a2ff;
   --main-color-lighten: #4fc3f7;
-  --main-width: 980px;
+  --main-text-color: #444752;
+  --main-width: 940px;
   --container-width: 810px;
-  --footer-width: 1440px;
+  --footer-width: 1400px;
+}
+
+body {
+  margin: 0;
+  font-family: 'Baloo Chettan 2', cursive;
 }
 
 .container {
