--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -61,3 +61,17 @@ body {
 .text-right {
   text-align: right;
 }
+
+.float-right {
+  float: right;
+}
+.clearfix {
+  ::after {
+    content: '.';
+    display: block;
+    height: 0;
+    line-height: 0;
+    clear: both;
+    visibility: hidden;
+  }
+}
