done home features

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -14,3 +14,8 @@
   color: var(--main-text-color);
   letter-spacing: 0.2px;
 }
+
+.hp {
+  color: var(--main-text-color);
+  margin: 0 !important;
+}
